WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24876
fast/forms/select-max-length.html times out in debug builds due to HTMLSelectElement::setLength being O(N^2)
https://bugs.webkit.org/show_bug.cgi?id=24876
Summary
fast/forms/select-max-length.html times out in debug builds due to HTMLSelect...
Mark Rowe (bdash)
Reported
2009-03-26 22:08:37 PDT
After <
http://trac.webkit.org/changeset/42012
>, fast/forms/select-max-length.html is frequently timing out on my MacBook Pro in a debug build. Running the test manually shows it takes around 17 seconds to complete, which is above the new 15s threshold.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-26 22:09:57 PDT
It looks like HTMLSelectElement::setLength() is O(N^2)
Adam Roben (:aroben)
Comment 2
2009-03-27 09:02:11 PDT
Maybe we should back out
r42012
Adam Roben (:aroben)
Comment 3
2009-03-27 09:02:37 PDT
(Obviously it would be good to improve the test's performance, too!)
Mark Rowe (bdash)
Comment 4
2009-03-27 09:58:03 PDT
***
Bug 24889
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 5
2009-03-27 09:59:38 PDT
Fixing HTMLSelectElement::setLength would be a better idea, unless there are other tests also timing out.
Mark Rowe (bdash)
Comment 6
2009-03-27 14:09:34 PDT
I have a patch that drops the time of this test from 17 seconds down to around 4.5 seconds by improving HTMLSelectElement::setLength. I need to verify that the change is safe in the face of fun things like mutation events, and then will put a patch up for review.
Mark Rowe (bdash)
Comment 7
2009-03-27 14:34:17 PDT
Fixed in
r42050
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug