Fix <https://bugs.webkit.org/show_bug.cgi?id=24876>. Bug 24876: fast/forms/select-max-length.html times out in debug builds due to HTMLSelectElement::setLength being O(N^2)

Reviewed by Sam Weinig.

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::setLength): Repeatedly calling remove to remove elements causes us to recalculate the list
items after each node is removed, leading to O(N^2) behaviour.  By inlining the batch removal in to setLength we can avoid
this gratuitous recalcuation.

Canonical link: https://commits.webkit.org/34106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42050 268f45cc-cd09-0410-ab3c-d52691b4dbfc